# vrx

./: .gitignore  .travis.yml
usv_gazebo_plugins/src/: usv_gazebo_thrust_plugin.cc
vrx_gazebo/: CMakeLists.txt
vrx_gazebo/launch/: dock.launch  navigation_task.launch  perception_task.launch  sandisland.launch  scan_and_dock.launch  station_keeping.launch  vrx.launch  wayfinding.launch
vrx_gazebo/nodes/: controlx.py  quat2rpy.py  twist2thrust.py  velocity.py
wamv_controls/cascaded_pid_controller/: CMakeLists.txt  README.txt  package.xml  setup.py
wamv_controls/cascaded_pid_controller/cfg/: AccelerationControl.cfg  PositionControl.cfg  VelocityControl.cfg
wamv_controls/cascaded_pid_controller/config/wamv/: inertial.yaml  pos_pid_control.yaml  vel_pid_control.yaml
wamv_controls/cascaded_pid_controller/launch/: joy_accel.launch  joy_velocity.launch  position_hold.launch  velocity_hold.launch
wamv_controls/cascaded_pid_controller/scripts/: AccelerationControl.py  PositionControl.py  VelocityControl.py
wamv_controls/cascaded_pid_controller/src/PID/: PIDRegulator.py
wamv_controls/sensor_fusion/: CMakeLists.txt  README.txt  TODO  package.xml  setup.py
wamv_controls/sensor_fusion/include/: dvl_data.h  gps_data.h  imu_data.h  nav_main.h
wamv_controls/sensor_fusion/launch/: odom.launch
wamv_controls/sensor_fusion/src/: dvl_data.cpp  gps_data.cpp  imu_data.cpp  nav_main.cpp  nav_node.cpp  velocity.py
wamv_controls/trajectory_controller/: CMakeLists.txt  README.txt  package.xml
wamv_controls/trajectory_controller/launch/: move_base.launch
wamv_controls/trajectory_generator/config/: costmap_common_params.yaml
wamv_controls/trajectory_generator/launch/: move_base.launch
wamv_controls/trajectory_generator/src/: occgrid.py
wamv_controls/wamv_teleop/: CMakeLists.txt  package.xml
wamv_controls/wamv_teleop/launch/: wamv_keyboard.launch  wamv_teleop.launch
wamv_controls/wamv_teleop/scripts/: vehicle_teleop.py
wamv_controls/wamv_thruster_manager/: CMakeLists.txt  README.txt  TODO  package.xml
wamv_controls/wamv_thruster_manager/config/wamv/: TAM.yaml
wamv_controls/wamv_thruster_manager/launch/: thruster_manager.launch
wamv_controls/wamv_thruster_manager/src/: thrust_allocator.py
wamv_gazebo/config/: rviz_vrx.rviz  sensor_iitk.yaml
wamv_gazebo/launch/: localization_example.launch
wamv_master/: CMakeLists.txt  README.txt  package.xml
wamv_master/launch/: master.launch
wamv_perception/: README.txt
wamv_perception/wamv_lidar/: CMakeLists.txt  README.txt  package.xml
wamv_perception/wamv_lidar/src/: passthroughFilter.cpp
wamv_perception/wamv_mapping/: CMakeLists.txt  package.xml
wamv_perception/wamv_mapping/launch/: map_generate.launch
wamv_perception/wamv_vision/: CMakeLists.txt  package.xml
wamv_perception/wamv_vision/src/: open1.cpp
wamv_vision/: CMakeLists.txt
wamv_vision/src/: open1.cpp
(+1 files in other folders)
