<?xml version="1.0"?>
<package format="2">
  <name>cascaded_pid_controller</name>
  <version>0.6.8</version>
  <description>A cascade of PID controllers for acceleration, velocity, and position control.</description>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
</package>
