<?xml version="1.0"?>
<package format="2">
  <name>wamv_thruster_manager</name>
  <version>0.6.8</version>
  <description>The thruster manager package</description>

  <maintainer email="ksakash@iitk.ac.in">Akash Kumar Singh</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
